...

    <string name="app_name">Memory Assistant</string>

    <!--Main-->
    <string name="login">Login</string>
    <string name="learn">Learn</string>
    <string name="practice">Practice</string>
    <string name="recall">Recall</string>
    <string name="preferences">Preferences</string>
    <string name="get_pro">Be A Part</string>
    <string name="apply">Implement</string>
    <string name="my_space">My Space</string>
    <string name="reminders">Reminders</string>
    <string name="title_activity_preferences">Preferences</string> <!--Weird error without this-->
...
    <string name="choose_file">Choose File</string>

    <!--Recall-->
    <string name="enter_ans">Enter responses</string>
    <string name="score">Score</string>
    <string name="time_taken">Time taken</string>
    <string name="check">Check</string>
    <string name="just_answers">Give Up!</string>
    <string name="time_elapsed">Time Elapsed</string>
    <string name="time_left">Time Left</string>
    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="your_response">Your Responses</string>
...
    <string name="events">events</string>
    <string name="sz">Select maximum digits in a value</string>
    <string name="clump">How many values to group together</string>
    <string name="sw">Stopwatch</string>
    <string name="tm">Timer</string>
    <string name="clock">Select Timekeeper</string>
    <string name="start">Start</string>
    <string name="time_up">Time\'s Up</string>
    <string name="ed">Please Enter Duration!</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="ers">Enter number of values and size of each value</string>
...
    <string name="show_only_the_year">Show only the year</string>
    <string name="negative">Include negative numbers</string>
    <string name="decimal">Include decimal numbers</string>
    <string name="start_timer">Start Timer</string>
    <string name="start_stopwatch">Start Stopwatch</string>
    <string name="standard">Standard</string>
    <string name="custom">Custom</string>
    <string name="choose_level">Choose level</string>
    <string name="start_year">Select start year</string>
    <string name="end_year">Select end year</string>
    <string name="storage_permission_for_recall">Storage permissions are required for Recall</string>
    <string name="speaking">Speaking</string>

...
