...
                    android:visibility="visible" />
                <!--Don't use "layout-gravity=center", it is buggy-->

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/response_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                android:visibility="gone">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:id="@+id/text_response_scroll_view">
                    <!--This ScrollView is used to make the edit text scroll smoothly-->

                    <EditText
                        android:id="@+id/response_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/enter_ans"
                        android:textSize="20sp"
                        android:importantForAutofill="no"
...

            </LinearLayout>

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/button_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="horizontal"
            android:layout_gravity="center"
            android:fadingEdgeLength="16dp"
            android:requiresFadingEdge="horizontal">
...
