<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cards"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.memory_athlete.memoryassistant.main.DisciplineActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/standard_custom_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/standard_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/standard" />

                <RadioButton
                    android:id="@+id/custom_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/custom" />

            </RadioGroup>

            <Spinner
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <LinearLayout
                android:id="@+id/custom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/no_of_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="number" />

                <Spinner
                    android:id="@+id/group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/negative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/negative"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/decimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/decimal"
                    android:visibility="gone" />

                <RadioGroup
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/clock">

                    <RadioButton
                        android:id="@+id/sw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sw" />

                    <RadioButton
                        android:id="@+id/timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tm" />

                    <RadioButton
                        android:id="@+id/none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/clock_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/minutes"
                        android:imeOptions="actionNext"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/sec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/seconds"
                        android:imeOptions="actionDone"
                        android:inputType="number" />

                </LinearLayout>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/random_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:justificationMode="inter_word"
                    android:textSize="24sp"
                    tools:targetApi="o" />
                <!--TODO: check if justification works-->

            </ScrollView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <ImageView
        android:id="@+id/cards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" />
    <!--Used only in cards so there wont be any error;
         everywhere else, keep visibility gone-->

    <GridView
        android:id="@+id/cards_practice_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/progress_bar_discipline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--Don't use "layout-gravity=center", it is buggy-->

    </LinearLayout>

    <TextView
        android:id="@+id/clock_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fadingEdgeLength="16dp"
        android:requiresFadingEdge="horizontal">

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev" />

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <Button
                android:id="@+id/stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />

            <Button
                android:id="@+id/resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resume" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <Button
                android:id="@+id/recall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recall" />

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>
